--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,4 +1,4 @@
-.container .filters {
+.filters {
     background-color: white;
     height: 70px;
     width: 100%;
@@ -9,7 +9,7 @@
     justify-content: center;
 }
 
-.filters button {
+button {
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
@@ -22,6 +22,6 @@
     margin-left: auto;
 }
 
-.filters button:hover {
+button:hover {
     opacity: 90%;
 }
